refactor: 重构代码